--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
   </head>
   <body>
     <h1>Practice for the APUSH timeline test :D</h1>
-
+    <p>made by David Mao</p>
     <div class="card">
       <img src="timeline1.png" alt="first timeline" width="500"><br>
       <div id="choices"></div>
@@ -412,7 +412,7 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
       <input id="J3" placeholder="1 to 10" /><br>
       <button onclick="runScript3()">Check Answer</button>
       <div id="out3" style="margin-top: .8rem;">Output will appear here…</div><br>
-      <p> ver 112341231</p>
+      <p> ver 1</p>
     </div>
   </body>
 </html>
