--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
     </style>
   </head>
   <body>
-    <h1>Practice for the APUSH timeline test :D</h1>
-    <p>made by David Mao</p>
+    <h1>APUSH Timeline Test Practice</h1>
+    <p>made by David Mao :D 8/27/2025</p>
     <div class="card">
       <img src="timeline1.png" alt="first timeline" width="500"><br>
       <div id="choices"></div>
