--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ def checkAns(a1: str, b1: str, c1: str, d1: str, e1: str, ans) -> str:
             for i in range(len(wrong)):
                 ret = ret + wrong[i] + " "
         return ret
-    except ValueErorr:
+    except ValueError:
         return "Invalid input (make sure they are all numbers)"
 
 checkAns("${A1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${C1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${D1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${E1.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", ${JSON.stringify(ansChoices)})
@@ -318,7 +318,7 @@ def checkAns(a1: str, b1: str, c1: str, d1: str, e1: str, f1: str, g1: str, h1: 
             for i in range(len(wrong)):
                 ret = ret + wrong[i] + " "
         return ret
-    except:
+    except ValueError:
         return "Invalid input (make sure they are all numbers)"
 
 checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${C3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${D3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${E3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${F3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${G3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${H3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${I3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${J3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", ${JSON.stringify(ansChoices3)})
