--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ checkAns("${A3.replace(/\\/g, "\\\\").replace(/`/g, "\\`")}", "${B3.replace(/\\/
   </head>
   <body>
     <h1>APUSH Timeline Test Practice</h1>
-    <p>made by David Mao 8/27/2025 :D</p>
+    <p>made by David Mao 8/27/2025 :D  (Note: question order is randomized when the page is refreshed)</p>
     <div class="card">
       <img src="timeline1.png" alt="first timeline" width="700"><br>
       <div id="choices"></div>
